# RGT

./: .gitignore  pyproject.toml  snt_modules.py  train_rgt.py  train_routing_transformer.py
configs/: rgt.yaml
rgt/: __init__.py  gn_modules.py  model.py  snt_modules.py  training.py  utils.py  utils_mlf.py
routergn/: __init__.py
routergn/models/: blocks.py  gtt.py
routergn/nn/: __init__.py  models.py  modules.py  utils.py
routergn/supervised/: __init__.py  gtt.py  models.py  policies.py  training.py
tests/: test_routergn.py
